--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <script defer src="app.js"></script>
 </head>
 
-<body>
+<body>      
     <form id="form">
         <input type="text" id="first" class="question" />
         <label for="first"><span>첫 번째 숫자</span></label>        
         <input type="text" id="second" class="question" />
-        <label for="second"><span>두 번째 숫자</span></label>
+        <label for="second"><span>두 번째 숫자 수정</span></label>
         <input type="submit" value="계산" />
+        
     </form>
     <div id="output"></div>
 </body>
