--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="text" id="first" class="question" />
         <label for="first"><span>첫 번째 숫자</span></label>        
         <input type="text" id="second" class="question" />
-        <label for="second"><span>두 번째 숫자 수정</span></label>
+        <label for="second"><span>두 번째 숫자</span></label>
         <input type="submit" value="계산" />
         
     </form>
